# cala-ratjada-insider

./: .gitignore  README.md  TEMPLATE.md  build-all-aabs.ps1  build-all-aabs.sh  build.gradle.kts  gradle.properties.template  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.calaratjada.insider.data.local.AppDatabase/: 1.json  3.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  vivox_bridge.cpp
app/src/main/cpp/include/: Vxc.h  VxcErrors.h  VxcEvents.h  VxcExports.h  VxcJNI.h  VxcRequests.h  VxcResponses.h  VxcTypes.h  vivox-config.h
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-th/: strings.xml
docs/: app-ads.txt  impressum.html  index.html  privacy-policy-global.html  privacy-policy.html
store-listings/: albania.txt  australia.txt  bhutan.txt  botswana.txt  brazil.txt  capeverde.txt  dubai.txt  egypt.txt  europe.txt  georgia.txt  germany.txt  japan.txt  kenya.txt  mexico.txt  morocco.txt  nigeria.txt  peru.txt  saudiarabia.txt  southafrica.txt  tajikistan.txt  tanzania.txt  thailand.txt  uk.txt  usa.txt  vietnam.txt
(+77 files in other folders)
